# core

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE.md  README.md  SECURITY.md  configuration.json  docker-compose.yml  photos.network.postman_collection.json  photos.network.postman_environment.json  requirements.txt  requirements_test.txt  run_tests  server.py  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: check.yaml
config/: configuration.json  configuration.json.bak
core/: __init__.py  __main__.py  addon.py  base.py  configs.py  const.py  context.py  core.py  loader.py
core/addons/: __init__.py
core/addons/api/: __init__.py  addon.json  auth.py
core/addons/metadata/: __init__.py  addon.json  setup.py
core/addons/nextcloud/: __init__.py  addon.json
core/addons/places365/: __init__.py  addon.json  main.py  places365.py  wideresnet.py
core/addons/sqlite/: __init__.py  addon.json
core/authentication/: __init__.py  app.py  auth_client.py  auth_code.py  auth_database.py  base.py  oauth.py  token.py  user.py
core/authentication/dto/: auth_code.py  token.py  user.py
core/authorization/: __init__.py  authorization_policy.py
core/persistency/: __init__.py  persistency.py  systemdata.py
core/persistency/dto/: directory.py  photo.py
core/utils/: __init__.py  timeout.py  uuid.py
core/webserver/: __init__.py  exceptions.py  request.py  status.py  type.py
core/webserver/templates/: authorize.jinja2  tmpl.jinja2
crates/accounts/: Cargo.toml  router.rs
crates/accounts/src/: lib.rs
crates/accounts/src/api/: mod.rs  router.rs
crates/accounts/src/api/routes/: account.rs  admin.rs  album_access.rs  album_media_mgmt.rs  customer.rs  download.rs  get_user_id_profile.rs  mod.rs  stats.rs
crates/activity_pub/: Cargo.toml  README.md
crates/activity_pub/src/: lib.rs
crates/activity_pub/src/model/: person.rs
crates/authentication/: Cargo.toml  README.md
crates/authentication/src/: error.rs  lib.rs  realm.rs
crates/authentication/src/handler/: authorize.rs  login.rs
crates/authentication/tests/: authorization_flow.rs
crates/authentication/tests/common/: mod.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs  zip_cache.rs
crates/common/src/auth/: account.rs  account_with_albums.rs  album_account.rs  auth_manager.rs  customer.rs  login.rs  mod.rs  permissions.rs  user.rs
crates/common/src/config/: client.rs  configuration.rs  database_config.rs  mod.rs  plugin.rs
crates/common/src/database/: album.rs  album_stats.rs  details.rs  location.rs  media_item.rs  mod.rs  reference.rs  tag.rs  user.rs
crates/common/src/http/: mod.rs
crates/common/src/http/extractors/: mod.rs  optuser.rs  user.rs
crates/common/src/model/: sensitive.rs
crates/common/src/model/auth/: mod.rs  user.rs
crates/core_activity_pub/: Cargo.toml  README.md
crates/core_activity_pub/src/: lib.rs
crates/core_activity_pub/src/routes/: webfinger.rs
crates/core_common/: Cargo.toml  README.md
crates/core_common/src/: lib.rs
crates/core_oauth/: Cargo.toml  README.md
crates/core_oauth/src/: client.rs  config.rs  lib.rs  realm.rs  request.rs  state.rs
crates/core_oauth/src/handler/: jwks.rs  login.rs
crates/core_oauth/tests/: discovery.rs
crates/core_photos/: Cargo.toml  README.md
crates/core_photos/src/: lib.rs
crates/core_photos/src/data/: error.rs  photo.rs
crates/core_photos/src/repository/: mod.rs
crates/database/: .env  Cargo.toml  README.md  seed_production.sql
crates/database/data/: init.sql
crates/database/migrations/: 0001_initial.sql  0002_customers.sql  0003_albums.sql  0004_accounts.sql  0005_permissions.sql  0006_stats.sql
crates/database/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
crates/media/: Cargo.toml  README.md
crates/media/src/: lib.rs  repository.rs
crates/media/src/api/: mod.rs  router.rs
crates/media/src/api/handler/: create_media_item_handler.rs  file_handler.rs  list_media_items_handler.rs  list_photos_handler.rs  photo_details.rs
crates/media/src/api/routes/: delete_album_media.rs  delete_media_id.rs  get_albums.rs  get_albums_id.rs  get_media.rs  get_media_id.rs  mod.rs  patch_albums_id.rs  patch_albums_id_share.rs  patch_albums_id_unshare.rs  patch_media_id.rs  photo_details.rs  post_albums.rs  post_albums_id_media.rs  post_media.rs  post_media_id.rs
crates/media/src/data/: error.rs  exif_info.rs  file.rs  location.rs  media_item.rs  mod.rs  photo.rs
crates/media/src/repository/: mod.rs  repository.rs
crates/oauth_authentication/: Cargo.toml  README.md
crates/oauth_authentication/src/: lib.rs
crates/oauth_authorization_server/: Cargo.toml  README.md
crates/oauth_authorization_server/src/: client.rs  config.rs  lib.rs  query.rs  realm.rs  request.rs  state.rs
crates/oauth_authorization_server/src/handler/: authorize.rs  discovery.rs  jwks.rs  login.rs  token.rs
crates/oauth_authorization_server/tests/: authorization_flow.rs
crates/oauth_authorization_server/tests/common/: mod.rs
crates/plugin_interface/: Cargo.toml
crates/plugin_interface/src/: lib.rs
crates/plugin_interface/src/model/: command.rs  response.rs
documentation/: oidc.http  oidc.hurl
documentation/end-to-end/: file_upload.hurl
documentation/http/: get_media.hurl  post_media.hurl  post_media_id.hurl
keys/: master.pem  mobil-app.pem
plugins/: libphotos_network_plugin.d  libphotos_network_plugin.rlib  libplugin_metadata.d  libplugin_metadata.dylib  libsample_plugin.d  libsample_plugin.dylib
src/: lib.rs  main.rs
src/api/authentication/: account.rs  mod.rs  repository.rs
src/api/authorization/: mod.rs
src/config/: client.rs  configuration.rs  mod.rs  plugin.rs
src/plugin/: mod.rs  plugin_manager.rs
tests/: __init__.py  conftest.py  core.sqlite3  test_authentication.py  test_config.py  test_webserver.py
tests/addons/api/: __init__.py  test_init.py
tests/api/authentication/: signin.rs
(+9 files in other folders)
