# define keys that can be inherited by members of the workspace
[workspace.package]
authors = ["Photos network developers <info@photos.network>"]
description = "A privacy first **photo storage and sharing service** in the fediverse."
version = "0.6.0"
homepage = "https://photos.network/"
documentation = "https://developers.photos.network/"
repository = "https://github.com/photos-network/core"
readme = "README.md"
license = "AGPL-3.0"
edition = "2021"

[package]
name = "core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]


[workspace]
members = [
    "crates/accounts",
    "crates/oauth_authorization_server",
    "crates/oauth_authentication",
    "crates/common",
    "crates/media",
    "crates/activity_pub",
    "crates/plugin_interface"
]

# define dependencies to be inherited by members of the workspace
[workspace.dependencies]
accounts = { path = "./crates/accounts" }
activity_pub = { path = "./crates/activity_pub" }
common = { path = "./crates/common" }
media = { path = "./crates/media" }
oauth_authorization_server = { path = "./crates/oauth_authorization_server" }
oauth_authentication = { path = "./crates/oauth_authentication" }

activitypub_federation = "0.4.6"
axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-test = { version = "12.1.0" }
anyhow = { version = "1.0.72" }

chrono = { version = "0.4.26", features = ["serde"] }

mockall = { version = "0.11.4" }

rstest = { version = "0.18.1" }

sea-orm = { version = "0.12.2", features = [ "runtime-tokio-rustls", "debug-print", "mock" ] }
serde = "1.0.183"
serde_json = { version = "1.0.104", features = ["raw_value"] }

tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "tracing", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry", "fmt", "std", "json"] }
tracing-appender = "0.2.2"

uuid = { version = "1.4.1", features = ["serde", "v4"] }
# core_api = { version = "=0.1.0", path = "./crates/core_api" }
# core_api_crud = { version = "=0.1.0", path = "./crates/api_crud" }
# core_apub = { version = "=0.1.0", path = "./crates/activity_pub" }






[dependencies.photos_network_plugin]
version = "0.2.0"
path = "./crates/plugin_interface"

[dependencies]
accounts = { workspace = true }
activity_pub = { workspace = true }
common = { workspace = true }
media = { workspace = true }
oauth_authentication = { workspace = true }
oauth_authorization_server = { workspace = true }






abi_stable = "0.11.1"
core_extensions = { version = "1.5.2", default_features = false, features = ["std"] }
serde = "1.0.157"
serde_json.workspace = true
smallvec = "1.8.0"


anyhow = "1.0.70"
axum = { version = "0.6.2", features = ["ws"] }

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# oxide-auth = "0.5"
# oxide-auth-axum = "0.3.0"

futures = "0.3.25"
futures-channel = "0.3.25"
futures-util = "0.3.25"
rumqttc = "0.21.0"

tokio.workspace = true
tokio-stream = { version = "0.1.11", features = ["net"] }
tokio-util = { version = "0.7.4", features = ["rt"] }

tower = { version = "0.4.13", features = ["util"] }
tower-http.workspace = true


[dev-dependencies]
pretty_assertions = "1.3.0"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "stream", "multipart"] }
