[metadata]
DEBUG=True

license      = Apache License 2.0
license_file = LICENSE.md
platforms    = any
description  = Open-source platform for photo management running on Python 3.
long_description = file: README.md
keywords     = photos, self-hosted, google-photos, apple-photos, object-detection, face-recognition, face-detection
classifier =
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Atmospheric Science
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8

[flake8]
exclude = venv,.git,build
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# W504 line break after binary operator
ignore =
    E501,
    E722,
    W503,
    W504

[mypy]
python_version = 3.7
show_error_codes = true
ignore_errors = true
follow_imports = silent
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
