[package]
name = "accounts"
description = "Manages all accounts in the database."
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "accounts"
path = "src/lib.rs"
doctest = false

[dependencies]
common = { path = "../common" }
database = { path = "../database" }

# serialization
serde = { workspace = true, features = ["derive"] }

# Router
axum = { workspace = true }
tower-http.workspace = true

# testing
mockall = { workspace = true }
rstest = { workspace = true }
