[package]
name = "accounts"
description = "Manages all accounts in the database."
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "accounts"
path = "src/lib.rs"
doctest = false

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true

# serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# error handling
anyhow.workspace = true

# Router
axum = { workspace = true }
tower-http.workspace = true

# async runtime
tokio.workspace = true
tokio-util.workspace = true

# logging
tracing.workspace = true

zip.workspace = true

[dev-dependencies]
rstest = { workspace = true }
