[package]
name = "common"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "common"
path = "src/lib.rs"
doctest = false

[dependencies]
async-trait.workspace = true
axum.workspace = true
http.workspace = true
photos_network_plugin = { path = "../plugin_interface" }

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
time.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
