[package]
name = "core_photos"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "core_photos"
path = "src/lib.rs"
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
