[package]
name = "database"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "database"
path = "src/lib.rs"
doctest = false

[dependencies]
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "sqlite", "any", "macros", "migrate", "time" ] }
