[package]
name = "database"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "database"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow.workspace = true
bcrypt.workspace = true
common.workspace = true
async-trait.workspace = true
rand.workspace = true
regex = "1.10.0"
tracing.workspace = true
uuid.workspace = true
tokio.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "mysql", "sqlite", "any", "macros", "migrate", "time", "chrono" ] }

[dev-dependencies]
pretty_assertions.workspace = true
testdir.workspace = true
time.workspace = true
