[package]
name = "media"
description = "Manages all media items in the database and on filesystem."
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "media"
path = "src/lib.rs"
doctest = false

[dependencies]
# serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Router
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true }
mime = { workspace = true }

# persistency
sea-orm = { workspace = true }
log = "0.4.19"

# testing
mockall = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
hyper = { workspace = true, features = ["full"] }
