[package]
name = "oauth_authentication"
description = "OAuth 2.0 authentication"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "oauth_authentication"
path = "src/lib.rs"
doctest = false

[dependencies]
# OIDC interfaces
openidconnect.workspace = true

anyhow.workspace = true

# error handling
thiserror.workspace = true

# URL parsing
url.workspace = true



# OIDC Router
axum.workspace = true
tower-http.workspace = true


# json payload
# serde = { workspace = true, features = ["derive"] }

# time related data in models
# chrono.workspace = true
# uuid.workspace = true

# key signing and cryptographics
# rsa = { version = "0.9.2" }

# Rendering login form
# dioxus = "0.3.2"
# dioxus-ssr = "0.3.0"

# tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true


[dev-dependencies]
testdir.workspace = true
rand.workspace = true
tokio.workspace = true
serde_json.workspace = true
axum-test.workspace = true
